# XLV

./: .gitignore  Architecture.md  README.md  app.py  graph.py  harvest_debug.txt  main.py  nodes.py  notifications.json  pyproject.toml  state.py  test_agent3.py  test_agent4.py  test_pipeline.py
agents/: __init__.py  agent_1_regulatory.py  agent_2_corporate.py  agent_2_corporate_scraper.py  agent_3_gap_analysis.py  agent_3_gap_analyst.py  agent_4_outreach.py  agent_4_outreach_drafter.py  agents.ipynb  pdf_reader.py  testpdfreader.py
data/government_vault/: india_heavy_industry_mandate.txt
data/mock_web_vault/: tata_metallics_sustainability_report.txt
frontend/: app.js  index.html  styles.css
orchestrator/: __init__.py  pipeline.py
services/: __init__.py  data_loader.py  email_service.py  extractors.py  notification_store.py
