[project]
name = "xlv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.24.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "langchain-openai>=1.3.3",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.6",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.26",
    "pypdf>=6.14.2",
    "faiss-cpu>=1.14.3",
    "langchain>=1.3.11",
    "langchain-huggingface>=1.2.2",
    "sentence-transformers>=5.6.0",
    "fitz>=0.0.1.dev2",
    "tools>=1.0.30",
]
